<resources>
    <string name="app_name">DomClick</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="we_help_select">Мы помогаем подбирать недвижимость</string>
    <string name="registration">ЗАРЕГИСТРИРОВАТЬСЯ</string>
    <string name="skip">ПРОПУСТИТЬ</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="logo_description">logo</string>
    <string name="registration_conditions">Регистрруясь вы соглагшаетесь с\nУсловиями использования приложения</string>
    <string name="or_enter_number">Или введите номер телефона</string>
    <string name="to_register">Зарегистрироваться</string>
    <string name="you_phone_number">Ваш номер телефона</string>
    <string name="registration_through_google">Зарегистрироваться с Google</string>
    <string name="registrations">Регистрация</string>
    <string name="confirm">ПОДТВЕРДИТЬ</string>
    <string name="search">Поиск</string>
    <string name="saved">Сохраненное</string>
    <string name="cabinet">Кабинет</string>
    <string name="i_want_buy">
        <![CDATA[
        Я хочу <font color=\'#FF8170\'>купить </font>
        ]]>
        </string>
    <string name="i_want_rent">
        <![CDATA[
        Я хочу <font color=\'#FF8170\'>арендовать </font>
        ]]>
        </string>
    <string name="i_want_sell">
        <![CDATA[
        Я хочу <font color=\'#FF8170\'>продать </font>
        ]]>
        </string>
    <string name="apply">ПРИМЕНИТЬ</string>
    <string name="buy">Купить</string>
    <string name="rent">Арендовать</string>
    <string name="sell">Продать</string>
    <string name="Where">Где?</string>
    <string name="cost_to">Стоимость до</string>
    <string name="address_hint">Адрес, Метро, Район</string>
    <string name="price_from">Цена от</string>
    <string name="price_to">Цена до</string>
    <string name="sing_up_for_viewing">ЗАПИСАТЬСЯ НА ПРОСМОТР</string>
</resources>