<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBlueVeryLight"
    tools:context=".ui.fragments.FirstFragment">

    <ImageView
        android:id="@+id/first_fragment_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo"
        android:contentDescription="@string/logo_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/big_margin"/>

    <TextView
        android:id="@+id/first_fragment_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_margin"
        android:text="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_fragment_logo"
        style="@style/text_h1" />

    <TextView
        android:id="@+id/first_fragment_we_help_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/we_help_select"
        android:layout_marginTop="@dimen/normal_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_fragment_name"
        style="@style/text_normal" />
    
    <Button
        android:id="@+id/first_fragment_reg_btn"
        android:text="@string/registration"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/normal_margin"
        android:layout_marginBottom="@dimen/big_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/first_fragment_skip_btn"
        style="@style/red_button"/>

    <Button
        android:id="@+id/first_fragment_skip_btn"
        android:text="@string/skip"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/normal_margin"
        android:layout_marginBottom="@dimen/big_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/first_fragment_forget_password"
        style="@style/white_button" />

    <TextView
        android:id="@+id/first_fragment_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textColor="@color/colorTextBlue"
        android:layout_marginBottom="@dimen/big_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/text_normal" />

</androidx.constraintlayout.widget.ConstraintLayout>