<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_apartment_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background">

    <View
        android:id="@+id/bottom_sheet_pipka"
        android:layout_width="50dp"
        android:layout_height="5dp"
        android:background="@drawable/divider"
        android:layout_margin="6dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/bottom_sheet_cost_et_price_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        style="@style/white_edit"
        android:hint="@string/price_from"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_pipka"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/bottom_sheet_cost_et_price_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        style="@style/white_edit"
        android:hint="@string/price_to"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_cost_et_price_from"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/bottom_sheet_apartment_ok_btn"
        android:layout_width="150dp"
        android:text="@string/apply"
        android:padding="12dp"
        android:layout_margin="@dimen/normal_margin"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/normal_margin"
        android:layout_marginBottom="@dimen/big_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_cost_et_price_to"
        style="@style/red_button"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_margin"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_apartment_ok_btn"/>

</androidx.constraintlayout.widget.ConstraintLayout>