<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_buy_sell_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background">

    <View
        android:id="@+id/bottom_sheet_pipka"
        android:layout_width="50dp"
        android:layout_height="5dp"
        android:background="@drawable/divider"
        android:layout_margin="6dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/bottom_sheet_buy_txt"
        style="@style/text_h3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:text="@string/buy"
        android:layout_marginTop="@dimen/normal_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_pipka" />

    <View
        android:id="@+id/divider_buy"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/divider"
        android:layout_marginTop="@dimen/normal_margin"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_buy_txt"/>

    <TextView
        android:id="@+id/bottom_sheet_rent_txt"
        style="@style/text_h3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:text="@string/rent"
        android:layout_marginTop="@dimen/normal_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_buy" />

    <View
        android:id="@+id/divider_rent"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/divider"
        android:layout_marginTop="@dimen/normal_margin"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_rent_txt"/>

    <TextView
        android:id="@+id/bottom_sheet_sell_txt"
        style="@style/text_h3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:text="@string/sell"
        android:layout_marginTop="@dimen/normal_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_rent" />

    <View
        android:id="@+id/divider_sell"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/divider"
        android:layout_marginTop="@dimen/normal_margin"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_sell_txt"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_margin"
        app:layout_constraintTop_toBottomOf="@id/divider_sell"/>

</androidx.constraintlayout.widget.ConstraintLayout>